# visual-handoff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/flutter/: .visual-handoff.toml
examples/web/: .visual-handoff.toml
src/visual_handoff/: __init__.py  __main__.py  adapters.py  cli.py  config.py  core.py  git_safety.py  profiles.py  templates.py
src/visual_handoff/profiles/: visual-base.md  visual-compose.md  visual-docs.md  visual-flutter.md  visual-react-native.md  visual-swiftui.md  visual-web.md
tests/: _bootstrap.py  test_adapters.py  test_cli.py  test_config.py  test_core.py  test_git_safety.py
